--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
 
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <a href="#" class="link-underline">About Us</a>
+  </body>
 </html>
