Defined styles for icons

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <a href="#" class="link-underline">About Us</a>
+    <ul class="list">
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul>
   </body>
 </html>
