Defined styles for grids.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <button class="btn btn--white btn--small">Try It Free</button>
+    <div class="grid grid--1x2">
+      <div style="height: 70px; background: gold"></div>
+      <div style="height: 70px; background: red"></div>
+    </div>
   </body>
 </html>
