--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="grid grid--1x2">
-      <div style="height: 70px; background: gold"></div>
-      <div style="height: 70px; background: red"></div>
+    <div class="callout">
+      <h3>Ready To Build Your Community?</h3>
+      <button class="btn btn--primary">Get Started For Free</button>
     </div>
   </body>
 </html>
