Defined styles for navigations.

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="callout">
-      <h3>Ready To Build Your Community?</h3>
-      <button class="btn btn--primary">Get Started For Free</button>
-    </div>
+    <header class="nav">
+      <img class="nav__logo" src="images/logo.svg" alt="" />
+      <button class="btn btn--white btn--small nav__btn">Try It Free</button>
+    </header>
   </body>
 </html>
