--- a/index.html
+++ b/index.html
@@ -37,23 +37,18 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header class="hero">
-      <header class="nav hero__header">
-        <img class="nav__logo" src="images/logo.svg" alt="" />
-        <button class="btn btn--white btn--small nav__btn">Try It Free</button>
-      </header>
-      <div class="grid grid--1x2 hero__content">
-        <div>
-          <h1>Build the Community Your Fans Will Love</h1>
+    <div class="card">
+      <div class="grid grid--1x2">
+        <img src="images/illustration-grow-together.svg" alt="" />
+        <div class="card__content">
+          <h2>Grow Together</h2>
           <p>
-            Huddle re-imagines the way we build communities. You have a voice,
-            but so does your audience. Create connections with your users as you
-            engage in genuine discussion.
+            Generate meaningful discussions with your audience and build a
+            strong, loyal community. Think of the insightful conversations you
+            miss out on with a feedback form.
           </p>
-          <button class="btn btn--primary">Get Started For Free</button>
         </div>
-        <img class="hero__image" src="images/illustration-mockups.svg" alt="" />
       </div>
-    </header>
+    </div>
   </body>
 </html>
