--- a/index.html
+++ b/index.html
@@ -37,6 +37,78 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <header class="hero">
+      <header class="nav hero__header">
+        <img class="logo" src="images/logo.svg" alt="" />
+        <button class="btn btn--white btn--small nav__btn">Try It Free</button>
+      </header>
+      <div class="grid grid--1x2 hero__content">
+        <div>
+          <h1>Build the Community Your Fans Will Love</h1>
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion.
+          </p>
+          <button class="btn btn--primary">Get Started For Free</button>
+        </div>
+        <img class="hero__image" src="images/illustration-mockups.svg" alt="" />
+      </div>
+    </header>
+
+    <main>
+      <article>
+        <div class="card">
+          <div class="grid grid--1x2">
+            <img src="images/illustration-grow-together.svg" alt="" />
+            <div class="card__content">
+              <h2>Grow Together</h2>
+              <p>
+                Generate meaningful discussions with your audience and build a
+                strong, loyal community. Think of the insightful conversations
+                you miss out on with a feedback form.
+              </p>
+            </div>
+          </div>
+        </div>
+      </article>
+      <article>
+        <div class="card">
+          <div class="grid grid--1x2">
+            <div class="card__content">
+              <h2>Flowing Conversations</h2>
+              <p>
+                You wouldn't paginate a conversation in real life, so why do it
+                online? Our threads have just-in-time loading for a more natural
+                flow.
+              </p>
+            </div>
+            <img src="images/illustration-flowing-conversation.svg" alt="" />
+          </div>
+        </div>
+      </article>
+      <article>
+        <div class="card">
+          <div class="grid grid--1x2">
+            <img src="images/illustration-your-users.svg" alt="" />
+            <div class="card__content">
+              <h2>Your Users</h2>
+              <p>
+                It takes no time at all to integrate Huddle with your app's
+                authentication solution. This means, once signed in to your app,
+                your users can start chatting immediately.
+              </p>
+            </div>
+          </div>
+        </div>
+      </article>
+      <aside>
+        <div class="callout">
+          <h3>Ready To Build Your Community?</h3>
+          <button class="btn btn--primary">Get Started For Free</button>
+        </div>
+      </aside>
+    </main>
     <footer class="footer">
       <div>
         <img class="logo" src="images/logo-white.svg" alt="" />
