--- a/index.html
+++ b/index.html
@@ -201,6 +201,13 @@
           </span>
         </div>
         <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
+        <p class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by
+          <a href="https://github.com/ejikemechiozoadiro">Chiozoadiro</a>.
+        </p>
       </div>
     </footer>
   </body>
