--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
           >. Coded by
-          <a href="https://github.com/ejikemechiozoadiro">Chiozoadiro</a>.
+          <a target="_blank" href="https://github.com/ejikemechiozoadiro"
+            >Chiozoadiro</a
+          >.
         </p>
       </div>
     </footer>
